# hackdata-ecommerce-example

./: .gitignore  README.md  pyproject.toml
helm/: Chart.yaml  values.yaml
helm/templates/: dbt-cronjob.yaml
nuvalence_dbt/: Dockerfile  dbt_project.yml  entrypoint.sh  profiles.yml
nuvalence_dbt/models/: cities_by_country.sql  cost_of_living.sql  flattenedOrders.sql  inventoryRecords.sql  orders.sql  productWithSku.sql  products.sql  schema.yml
