[tool.poetry]
name = "hackdata-dbt-template"
version = "0.1.0"
description = "Basic dbt project that can be scripted for use in data pipelines"
authors = ["Mathieson Sterling <msterling@nuvalence.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dbt-bigquery = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
